Role precedence middleware
