# docs/swagger.yaml
@@ -68,6 +68,8 @@ definitions:
         type: integer
       is_active:
         type: boolean
+      role:
+        $ref: '#/definitions/store.Role'
       token:
         type: string
       username:
@@ -122,6 +124,17 @@ definitions:
       post:
         $ref: '#/definitions/store.Post'
     type: object
+  store.Role:
+    properties:
+      description:
+        type: string
+      id:
+        type: integer
+      level:
+        type: integer
+      name:
+        type: string
+    type: object
   store.User:
     properties:
       created_at:
@@ -132,6 +145,8 @@ definitions:
         type: integer
       is_active:
         type: boolean
+      role:
+        $ref: '#/definitions/store.Role'
       username:
         type: string
     type: object
